force-app/main/default/objects/PumpStation__c/PumpStation__c.object-meta.xml
<CustomObject>
    <label>機場</label>
    <nameField>
        <label>機場名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>