force-app/main/default/objects/PumpStation__c/fields/Prefecture__c.field-meta.xml
<CustomField>
    <fullName>Prefecture__c</fullName>
    <label>都道府県</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>北海道</fullName>
            </value>
            <value>
                <fullName>青森県</fullName>
            </value>
            <value>
                <fullName>岩手県</fullName>
            </value>
            <value>
                <fullName>宮城県</fullName>
            </value>
            <value>
                <fullName>秋田県</fullName>
            </value>
            <value>
                <fullName>山形県</fullName>
            </value>
            <value>
                <fullName>福島県</fullName>
            </value>
            <value>
                <fullName>茨城県</fullName>
            </value>
            <value>
                <fullName>栃木県</fullName>
            </value>
            <value>
                <fullName>群馬県</fullName>
            </value>
            <value>
                <fullName>埼玉県</fullName>
            </value>
            <value>
                <fullName>千葉県</fullName>
            </value>
            <value>
                <fullName>東京都</fullName>
            </value>
            <value>
                <fullName>神奈川県</fullName>
            </value>
            <value>
                <fullName>新潟県</fullName>
            </value>
            <value>
                <fullName>富山県</fullName>
            </value>
            <value>
                <fullName>石川県</fullName>
            </value>
            <value>
                <fullName>福井県</fullName>
            </value>
            <value>
                <fullName>山梨県</fullName>
            </value>
            <value>
                <fullName>長野県</fullName>
            </value>
            <value>
                <fullName>岐阜県</fullName>
            </value>
            <value>
                <fullName>静岡県</fullName>
            </value>
            <value>
                <fullName>愛知県</fullName>
            </value>
            <value>
                <fullName>三重県</fullName>
            </value>
            <value>
                <fullName>滋賀県</fullName>
            </value>
            <value>
                <fullName>京都府</fullName>
            </value>
            <value>
                <fullName>大阪府</fullName>
            </value>
            <value>
                <fullName>兵庫県</fullName>
            </value>
            <value>
                <fullName>奈良県</fullName>
            </value>
            <value>
                <fullName>和歌山県</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>