force-app/main/default/objects/PumpStation__c/fields/SewerAbility__c.field-meta.xml
<CustomField>
    <fullName>SewerAbility__c</fullName>
    <description>水環境BU管理項目（下水）の計画能力：T（㎥／日最大）計画排水量：P（㎥/分）</description>
    <label>計画能力：T（㎥／日最大）計画排水量：P（㎥/分）</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>