force-app/main/default/objects/PumpStation__c/fields/SewerBasin__c.field-meta.xml
<CustomField>
    <fullName>SewerBasin__c</fullName>
    <description>水環境BU管理項目（下水）の流域/公共/集落排水</description>
    <label>流域/公共/集落排水</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>流域</fullName>
            </value>
            <value>
                <fullName>公共</fullName>
            </value>
            <value>
                <fullName>集落排水</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>