force-app/main/default/objects/PumpStation__c/fields/SewerBlower1__c.field-meta.xml
<CustomField>
    <fullName>SewerBlower1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>下水の送風機1</description>
    <label>送風機1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (送風機1)</relationshipLabel>
    <relationshipName>PumpStaSewerBlower1List</relationshipName>
    <type>Lookup</type>
</CustomField>