force-app/main/default/objects/PumpStation__c/fields/SewerBlower2__c.field-meta.xml
<CustomField>
    <fullName>SewerBlower2__c</fullName>
    <description>下水の送風機2</description>
    <label>送風機2</label>
    <type>TextArea</type>
</CustomField>