force-app/main/default/objects/PumpStation__c/fields/SewerBlowerDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerBlowerDeliveryYear__c</fullName>
    <description>下水の送風機1　納入年度</description>
    <label>送風機1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>