force-app/main/default/objects/PumpStation__c/fields/SewerBlowerRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerBlowerRemarks1__c</fullName>
    <description>下水の送風機1　備考</description>
    <label>送風機1　備考</label>
    <type>TextArea</type>
</CustomField>