force-app/main/default/objects/PumpStation__c/fields/SewerBlowerRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerBlowerRemarks2__c</fullName>
    <description>下水の送風機2　備考</description>
    <label>送風機2　備考</label>
    <type>TextArea</type>
</CustomField>