force-app/main/default/objects/PumpStation__c/fields/SewerBusinessEntity__c.field-meta.xml
<CustomField>
    <fullName>SewerBusinessEntity__c</fullName>
    <description>水環境BU管理項目（下水）の事業主体/流域名</description>
    <label>事業主体/流域名</label>
    <type>TextArea</type>
</CustomField>