force-app/main/default/objects/PumpStation__c/fields/SewerCivilEngWork2__c.field-meta.xml
<CustomField>
    <fullName>SewerCivilEngWork2__c</fullName>
    <description>下水の土木2</description>
    <label>下水土木2</label>
    <type>TextArea</type>
</CustomField>