force-app/main/default/objects/PumpStation__c/fields/SewerCivilEngWorkRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerCivilEngWorkRemarks1__c</fullName>
    <description>下水の土木1　備考</description>
    <label>下水土木1　備考</label>
    <type>TextArea</type>
</CustomField>