force-app/main/default/objects/PumpStation__c/fields/SewerCivilEngWorkRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerCivilEngWorkRemarks2__c</fullName>
    <description>下水の土木2　備考</description>
    <label>下水土木2　備考</label>
    <type>TextArea</type>
</CustomField>