force-app/main/default/objects/PumpStation__c/fields/SewerDesignConsul2__c.field-meta.xml
<CustomField>
    <fullName>SewerDesignConsul2__c</fullName>
    <description>下水の設計コンサル2</description>
    <label>下水設計コンサル2</label>
    <type>TextArea</type>
</CustomField>