force-app/main/default/objects/PumpStation__c/fields/SewerDesignConsulRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerDesignConsulRemarks1__c</fullName>
    <description>下水の設計コンサル1　備考</description>
    <label>下水設計コンサル1　備考</label>
    <type>TextArea</type>
</CustomField>