force-app/main/default/objects/PumpStation__c/fields/SewerDesignConsulRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerDesignConsulRemarks2__c</fullName>
    <description>下水の設計コンサル2　備考</description>
    <label>下水設計コンサル2　備考</label>
    <type>TextArea</type>
</CustomField>