force-app/main/default/objects/PumpStation__c/fields/SewerDistantControl1__c.field-meta.xml
<CustomField>
    <fullName>SewerDistantControl1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>下水の遠制1</description>
    <label>下水遠制1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (遠制1)</relationshipLabel>
    <relationshipName>PumpStaSewerDistantControl1List</relationshipName>
    <type>Lookup</type>
</CustomField>