force-app/main/default/objects/PumpStation__c/fields/SewerDistantControl2__c.field-meta.xml
<CustomField>
    <fullName>SewerDistantControl2__c</fullName>
    <description>下水の遠制2</description>
    <label>下水遠制2</label>
    <type>TextArea</type>
</CustomField>