force-app/main/default/objects/PumpStation__c/fields/SewerDistantControlDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerDistantControlDeliveryYear__c</fullName>
    <description>下水の遠制1　納入年度</description>
    <label>下水遠制1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>