force-app/main/default/objects/PumpStation__c/fields/SewerDistantControlRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerDistantControlRemarks1__c</fullName>
    <description>下水の遠制1　備考</description>
    <label>下水遠制1　備考</label>
    <type>TextArea</type>
</CustomField>