force-app/main/default/objects/PumpStation__c/fields/SewerDistantControlRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerDistantControlRemarks2__c</fullName>
    <description>下水の遠制2　備考</description>
    <label>下水遠制2　備考</label>
    <type>TextArea</type>
</CustomField>