force-app/main/default/objects/PumpStation__c/fields/SewerExtraHighDelivery1__c.field-meta.xml
<CustomField>
    <fullName>SewerExtraHighDelivery1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>下水の特高受配1</description>
    <label>下水特高受配1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (特高受配1)</relationshipLabel>
    <relationshipName>PumpStaSewerExtraHighDelivery1List</relationshipName>
    <type>Lookup</type>
</CustomField>