force-app/main/default/objects/PumpStation__c/fields/SewerExtraHighDelivery2__c.field-meta.xml
<CustomField>
    <fullName>SewerExtraHighDelivery2__c</fullName>
    <description>下水の特高受配2</description>
    <label>下水特高受配2</label>
    <type>TextArea</type>
</CustomField>