force-app/main/default/objects/PumpStation__c/fields/SewerExtraHighDeliveryRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerExtraHighDeliveryRemarks1__c</fullName>
    <description>下水の特高受配1　備考</description>
    <label>下水特高受配1　備考</label>
    <type>TextArea</type>
</CustomField>