force-app/main/default/objects/PumpStation__c/fields/SewerExtraHighDeliveryRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerExtraHighDeliveryRemarks2__c</fullName>
    <description>下水の特高受配2　備考</description>
    <label>下水特高受配2　備考</label>
    <type>TextArea</type>
</CustomField>