force-app/main/default/objects/PumpStation__c/fields/SewerExtraHighDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerExtraHighDeliveryYear__c</fullName>
    <description>下水の特高受配1　納入年度</description>
    <label>下水特高受配1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>