force-app/main/default/objects/PumpStation__c/fields/SewerGenEffluentTreat2__c.field-meta.xml
<CustomField>
    <fullName>SewerGenEffluentTreat2__c</fullName>
    <description>下水の動力・汚泥処理2</description>
    <label>動力・汚泥処理2</label>
    <type>TextArea</type>
</CustomField>