force-app/main/default/objects/PumpStation__c/fields/SewerGenEffluentTreatDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerGenEffluentTreatDeliveryYear__c</fullName>
    <description>下水の動力・汚泥処理1　納入年度</description>
    <label>動力・汚泥処理1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>