force-app/main/default/objects/PumpStation__c/fields/SewerGenEffluentTreatRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerGenEffluentTreatRemarks1__c</fullName>
    <description>下水の動力・汚泥処理1　備考</description>
    <label>動力・汚泥処理1　備考</label>
    <type>TextArea</type>
</CustomField>