force-app/main/default/objects/PumpStation__c/fields/SewerGenEffluentTreatRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerGenEffluentTreatRemarks2__c</fullName>
    <description>下水の動力・汚泥処理2　備考</description>
    <label>動力・汚泥処理2　備考</label>
    <type>TextArea</type>
</CustomField>