force-app/main/default/objects/PumpStation__c/fields/SewerGenerator1__c.field-meta.xml
<CustomField>
    <fullName>SewerGenerator1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>下水の自家発1</description>
    <label>下水自家発1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (自家発1)</relationshipLabel>
    <relationshipName>PumpStaSewerGenerator1List</relationshipName>
    <type>Lookup</type>
</CustomField>