force-app/main/default/objects/PumpStation__c/fields/SewerGenerator2__c.field-meta.xml
<CustomField>
    <fullName>SewerGenerator2__c</fullName>
    <description>下水の自家発2</description>
    <label>下水自家発2</label>
    <type>TextArea</type>
</CustomField>