force-app/main/default/objects/PumpStation__c/fields/SewerGeneratorDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerGeneratorDeliveryYear__c</fullName>
    <description>下水の自家発1　納入年度</description>
    <label>下水自家発1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>