force-app/main/default/objects/PumpStation__c/fields/SewerGeneratorRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerGeneratorRemarks1__c</fullName>
    <description>下水の自家発1　備考</description>
    <label>下水自家発1　備考</label>
    <type>TextArea</type>
</CustomField>