force-app/main/default/objects/PumpStation__c/fields/SewerGeneratorRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerGeneratorRemarks2__c</fullName>
    <description>下水の自家発2　備考</description>
    <label>下水自家発2　備考</label>
    <type>TextArea</type>
</CustomField>