force-app/main/default/objects/PumpStation__c/fields/SewerGenIncineration1__c.field-meta.xml
<CustomField>
    <fullName>SewerGenIncineration1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>下水の動力・焼却1</description>
    <label>動力・焼却1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (動力・焼却1)</relationshipLabel>
    <relationshipName>PumpStaSewerGenIncineration1List</relationshipName>
    <type>Lookup</type>
</CustomField>