force-app/main/default/objects/PumpStation__c/fields/SewerGenIncineration2__c.field-meta.xml
<CustomField>
    <fullName>SewerGenIncineration2__c</fullName>
    <description>下水の動力・焼却2</description>
    <label>動力・焼却2</label>
    <type>TextArea</type>
</CustomField>