force-app/main/default/objects/PumpStation__c/fields/SewerGenIncinerationDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerGenIncinerationDeliveryYear__c</fullName>
    <description>下水の動力・焼却1　納入年度</description>
    <label>動力・焼却1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>