force-app/main/default/objects/PumpStation__c/fields/SewerGenIncinerationRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerGenIncinerationRemarks2__c</fullName>
    <description>下水の動力・焼却2　備考</description>
    <label>動力・焼却2　備考</label>
    <type>TextArea</type>
</CustomField>