force-app/main/default/objects/PumpStation__c/fields/SewerGenPurification1__c.field-meta.xml
<CustomField>
    <fullName>SewerGenPurification1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>下水の動力・水処理1</description>
    <label>動力・水処理1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (動力・水処理1)</relationshipLabel>
    <relationshipName>PumpStaSewerGenPurification1List</relationshipName>
    <type>Lookup</type>
</CustomField>