force-app/main/default/objects/PumpStation__c/fields/SewerGenPurification2__c.field-meta.xml
<CustomField>
    <fullName>SewerGenPurification2__c</fullName>
    <description>下水の動力・水処理2</description>
    <label>動力・水処理2</label>
    <type>TextArea</type>
</CustomField>