force-app/main/default/objects/PumpStation__c/fields/SewerGenPurificationRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerGenPurificationRemarks2__c</fullName>
    <description>下水の動力・水処理2　備考</description>
    <label>動力・水処理2　備考</label>
    <type>TextArea</type>
</CustomField>