force-app/main/default/objects/PumpStation__c/fields/SewerHighDelivery2__c.field-meta.xml
<CustomField>
    <fullName>SewerHighDelivery2__c</fullName>
    <description>下水の高圧受配2</description>
    <label>下水高圧受配2</label>
    <type>TextArea</type>
</CustomField>