force-app/main/default/objects/PumpStation__c/fields/SewerHighDeliveryRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerHighDeliveryRemarks1__c</fullName>
    <description>下水の高圧受配1　備考</description>
    <label>下水高圧受配1　備考</label>
    <type>TextArea</type>
</CustomField>