force-app/main/default/objects/PumpStation__c/fields/SewerHighDeliveryRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerHighDeliveryRemarks2__c</fullName>
    <description>下水の高圧受配2　備考</description>
    <label>下水高圧受配2　備考</label>
    <type>TextArea</type>
</CustomField>