force-app/main/default/objects/PumpStation__c/fields/SewerHighDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerHighDeliveryYear__c</fullName>
    <description>下水の高圧受配1　納入年度</description>
    <label>下水高圧受配1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>