force-app/main/default/objects/PumpStation__c/fields/SewerIncineration1__c.field-meta.xml
<CustomField>
    <fullName>SewerIncineration1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>下水の焼却・溶融等1</description>
    <label>焼却・溶融等1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (焼却・溶融等1)</relationshipLabel>
    <relationshipName>PumpStaSewerIncineration1List</relationshipName>
    <type>Lookup</type>
</CustomField>