force-app/main/default/objects/PumpStation__c/fields/SewerIncineration2__c.field-meta.xml
<CustomField>
    <fullName>SewerIncineration2__c</fullName>
    <description>下水の焼却・溶融等2</description>
    <label>焼却・溶融等2</label>
    <type>TextArea</type>
</CustomField>