force-app/main/default/objects/PumpStation__c/fields/SewerIncinerationDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerIncinerationDeliveryYear__c</fullName>
    <description>下水の焼却・溶融等1　納入年度</description>
    <label>焼却・溶融等1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>