force-app/main/default/objects/PumpStation__c/fields/SewerIncinerationRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerIncinerationRemarks1__c</fullName>
    <description>下水の焼却・溶融等1　備考</description>
    <label>焼却・溶融等1　備考</label>
    <type>TextArea</type>
</CustomField>