force-app/main/default/objects/PumpStation__c/fields/SewerIncinerationRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerIncinerationRemarks2__c</fullName>
    <description>下水の焼却・溶融等2　備考</description>
    <label>焼却・溶融等2　備考</label>
    <type>TextArea</type>
</CustomField>