force-app/main/default/objects/PumpStation__c/fields/SewerOperateManage1__c.field-meta.xml
<CustomField>
    <fullName>SewerOperateManage1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>下水の運転管理1</description>
    <label>下水運転管理1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (運転管理1)</relationshipLabel>
    <relationshipName>PumpStaSewerOperateManage1List</relationshipName>
    <type>Lookup</type>
</CustomField>