force-app/main/default/objects/PumpStation__c/fields/SewerOperateManage2__c.field-meta.xml
<CustomField>
    <fullName>SewerOperateManage2__c</fullName>
    <description>下水の運転管理2</description>
    <label>下水運転管理2</label>
    <type>TextArea</type>
</CustomField>