force-app/main/default/objects/PumpStation__c/fields/SewerOperateManageRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerOperateManageRemarks1__c</fullName>
    <description>下水の運転管理1　備考</description>
    <label>下水運転管理1　備考</label>
    <type>TextArea</type>
</CustomField>