force-app/main/default/objects/PumpStation__c/fields/SewerOperateManageRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerOperateManageRemarks2__c</fullName>
    <description>下水の運転管理2　備考</description>
    <label>下水運転管理2　備考</label>
    <type>TextArea</type>
</CustomField>