force-app/main/default/objects/PumpStation__c/fields/SewerOther__c.field-meta.xml
<CustomField>
    <fullName>SewerOther__c</fullName>
    <description>下水のその他</description>
    <label>下水その他</label>
    <type>TextArea</type>
</CustomField>