force-app/main/default/objects/PumpStation__c/fields/SewerOutsource__c.field-meta.xml
<CustomField>
    <fullName>SewerOutsource__c</fullName>
    <description>水環境BU管理項目（下水）の事業団委託有無</description>
    <label>事業団委託</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>