force-app/main/default/objects/PumpStation__c/fields/SewerOzoneDeodrize2__c.field-meta.xml
<CustomField>
    <fullName>SewerOzoneDeodrize2__c</fullName>
    <description>下水のオゾン設備（脱臭）2</description>
    <label>下水オゾン設備（脱臭）2</label>
    <type>TextArea</type>
</CustomField>