force-app/main/default/objects/PumpStation__c/fields/SewerOzoneDeodrizeDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerOzoneDeodrizeDeliveryYear__c</fullName>
    <description>下水のオゾン設備（脱臭）1　納入年度</description>
    <label>下水オゾン設備（脱臭）1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>