force-app/main/default/objects/PumpStation__c/fields/SewerOzoneDeodrizeRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerOzoneDeodrizeRemarks1__c</fullName>
    <description>下水のオゾン設備（脱臭）1　備考</description>
    <label>下水オゾン設備（脱臭）1　備考</label>
    <type>TextArea</type>
</CustomField>