force-app/main/default/objects/PumpStation__c/fields/SewerOzoneTreat1__c.field-meta.xml
<CustomField>
    <fullName>SewerOzoneTreat1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>下水のオゾン設備（水処理・高度処理）1</description>
    <label>下水オゾン設備（水処理・高度処理）1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (オゾン設備（水処理・高度処理）1)</relationshipLabel>
    <relationshipName>PumpStaSewerOzoneTreat1List</relationshipName>
    <type>Lookup</type>
</CustomField>