force-app/main/default/objects/PumpStation__c/fields/SewerOzoneTreat2__c.field-meta.xml
<CustomField>
    <fullName>SewerOzoneTreat2__c</fullName>
    <description>下水のオゾン設備（水処理・高度処理）2</description>
    <label>下水オゾン設備（水処理・高度処理）2</label>
    <type>TextArea</type>
</CustomField>