force-app/main/default/objects/PumpStation__c/fields/SewerOzoneTreatDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerOzoneTreatDeliveryYear__c</fullName>
    <description>下水のオゾン設備（水処理・高度処理）1　納入年度</description>
    <label>下水オゾン設備（水処理・高度処理）1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>