force-app/main/default/objects/PumpStation__c/fields/SewerOzoneTreatRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerOzoneTreatRemarks1__c</fullName>
    <description>下水のオゾン設備（水処理・高度処理）1　備考</description>
    <label>下水オゾン設備（水処理・高度処理）1　備考</label>
    <type>TextArea</type>
</CustomField>