force-app/main/default/objects/PumpStation__c/fields/SewerProcessMerhod__c.field-meta.xml
<CustomField>
    <fullName>SewerProcessMerhod__c</fullName>
    <description>下水の処理方式：T 対象下水：P</description>
    <label>処理方式：T 対象下水：P</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>標準活性汚泥法</fullName>
            </value>
            <value>
                <fullName>OD法</fullName>
            </value>
            <value>
                <fullName>A2O法</fullName>
            </value>
            <value>
                <fullName>回分式活性汚泥法</fullName>
            </value>
            <value>
                <fullName>嫌気好気活性汚泥法</fullName>
            </value>
            <value>
                <fullName>ステップ法</fullName>
            </value>
            <value>
                <fullName>長時間エアレーション法</fullName>
            </value>
            <value>
                <fullName>汚水</fullName>
            </value>
            <value>
                <fullName>雨水</fullName>
            </value>
            <value>
                <fullName>汚水＋雨水</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>