force-app/main/default/objects/PumpStation__c/fields/SewerPump1__c.field-meta.xml
<CustomField>
    <fullName>SewerPump1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>下水のポンプ1</description>
    <label>ポンプ1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (ポンプ1)</relationshipLabel>
    <relationshipName>PumpStaSewerPump1List</relationshipName>
    <type>Lookup</type>
</CustomField>