force-app/main/default/objects/PumpStation__c/fields/SewerPump2__c.field-meta.xml
<CustomField>
    <fullName>SewerPump2__c</fullName>
    <description>下水のポンプ2</description>
    <label>ポンプ2</label>
    <type>TextArea</type>
</CustomField>