force-app/main/default/objects/PumpStation__c/fields/SewerPumpDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerPumpDeliveryYear__c</fullName>
    <description>下水のポンプ1　納入年度</description>
    <label>ポンプ1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>