force-app/main/default/objects/PumpStation__c/fields/SewerPumpRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerPumpRemarks1__c</fullName>
    <description>下水のポンプ1　備考</description>
    <label>ポンプ1　備考</label>
    <type>TextArea</type>
</CustomField>