force-app/main/default/objects/PumpStation__c/fields/SewerPumpRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerPumpRemarks2__c</fullName>
    <description>下水のポンプ2　備考</description>
    <label>ポンプ2　備考</label>
    <type>TextArea</type>
</CustomField>